the error message done. the reason it shows on refresh after inputting a bad URL is because when you refresh the browser caches it and sends the POST request again. This is just how it is and is working as intended. so explain it to people like that. https://stackoverflow.com/questions/1317486/how-to-avoid-resubmit-in-jsp-when-refresh

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,3 +7,7 @@ h1 {
     font-size: 400%;
     text-align: center;
 }
+
+.errorMessage {
+	text-align: center;
+}
